Fix background image alignment.

--- a/public/css/fx-bento.css
+++ b/public/css/fx-bento.css
@@ -140,7 +140,7 @@ a.fx-bento-app-link:hover { /* Creates a hover state in high-contrast modes */
   background: url("/img/fx-bento-sprites.png");
   background-repeat: no-repeat;
   background-position: center center;
-  background-position-x: -323px;
+  background-position-x: -305px;
   background-size: cover;
   width: 36px;
   height: 36px;
